# FerrofluidSimulation

./: .gitmodules  CMakeLists.txt  Ferrofluid (DESKTOP-84KFSPUs in Konflikt stehende Kopie 2016-11-04).sdf  Ferrofluid.sln  cmakeWin.sh
Debug/: Ferrofluid.ilk
Ferrofluid/: 1481875727.sim  1481875727.sim.hrf  1481875805.sim  1481875805.sim.hrf  1481875805.sim.metadata  1481876742.sim  1481876742.sim.hrf  1481876820.sim  1481876820.sim.hrf  1481882806.sim  1481882806.sim.hrf  1481882806.sim.metadata  1481883037.sim  1481883037.sim.hrf  1481883037.sim.metadata  1481883178.sim  1481883178.sim.hrf  1481883178.sim.metadata  1481883273.sim.hrf  1481883273.sim.metadata  1481883435.sim  1481883435.sim.hrf  1481883435.sim.metadata  1481883589.sim  1481883589.sim.hrf  1481883589.sim.metadata  1481883757.sim  1481883757.sim.hrf  1481883757.sim.metadata  1481883850.sim  1481883850.sim.hrf  1481883850.sim.metadata  1481883915.sim  1481883915.sim.hrf  1481883915.sim.metadata  1481884017.sim  1481884017.sim.hrf  1481884017.sim.metadata  1481884136.sim  1481884136.sim.hrf  (+26 more)
Ferrofluid/Debug/Ferrofluid.tlog/: Ferrofluid.lastbuildstate  icl-intelremotemonserver-intelremotemonagent-intelremotemonagent2.read.1.tlog  icl-intelremotemonserver-intelremotemonagent-intelremotemonagent2.read.10.tlog  icl-intelremotemonserver-intelremotemonagent-intelremotemonagent2.read.11.tlog  icl-intelremotemonserver-intelremotemonagent-intelremotemonagent2.read.13.tlog  icl-intelremotemonserver-intelremotemonagent-intelremotemonagent2.read.8.tlog  icl-intelremotemonserver-intelremotemonagent-intelremotemonagent2.write.1.tlog  icl-intelremotemonserver-intelremotemonagent-intelremotemonagent2.write.8.tlog  icl-intelremotemonserver-intelremotemonagent.read.1.tlog  (+17 more)
Renderer/: Main (DESKTOP-84KFSPUs in Konflikt stehende Kopie 2016-12-16).cpp  Renderer (DESKTOP-84KFSPUs in Konflikt stehende Kopie 2016-12-16).vcxproj  Renderer.vcxproj  Renderer.vcxproj.filters  fileutils.h  input.cpp  input.h  mat4.cpp  mat4.h  maths.h  shader.cpp  shader.h  window.cpp  window.h
Renderer/buffers/: buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
Renderer/vec/: vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
lib/: CMakeLists.txt
scripts/: ferroplot.nb
src/: CMakeLists.txt  CommandLineOptions.h  FerroSim.h  config.h  constants.h  main.cpp  math.h  simulation.cpp  simulation.h
src/ferrofluid/: CMakeLists.txt  FerroSim.h  config.h  math.h  mathMagnet.h  simulation.h
src/renderer/: .main.cpp.swp  CMakeLists.txt  main.cpp
x64/Debug/: Ferrofluid.ilk
x64/Release/: 1481871768.sim.metadata
(+54 files in other folders)
