# SET(GLFW_BUILD_EXAMPLES  OFF CACHE BOOL "disable the examples")
# SET(GLFW_BUILD_TESTS  OFF CACHE BOOL "disable the tests")
option(GLFW_BUILD_EXAMPLES "" OFF) 
option(GLFW_BUILD_TESTS  "" OFF)
ADD_SUBDIRECTORY(glfw)
ADD_SUBDIRECTORY(glad)
ADD_SUBDIRECTORY(flare)
ADD_SUBDIRECTORY(glm)
set(GLAD_INCLUDE_DIRS ${GLAD_INCLUDE_DIRS} PARENT_SCOPE)
